--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-
+  "name": "simple-express",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "start": "node ./bin/www",
+    "test": "node ./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "mocha": "^8.2.1"
   }
 }
